fix blob overflow CSS

--- a/style.css
+++ b/style.css
@@ -87,9 +87,9 @@ a:visited {
 }
 
 .wrapper {
-  position: absolute;
+  position: fixed;
   top: 0;
-  height: 100%;
+  height: 100vh;
   width: 100%;
   z-index: 2;
   backdrop-filter: blur(100px);
@@ -97,6 +97,7 @@ a:visited {
   overflow-y: scroll;
 }
 .landing {
+  min-height: 100vh;
   min-height: 100dvh;
   display: flex;
   align-items: center;
